# HIP-ElecSus

./: .gitignore  CITATION.cff  LICENSE.md  LindbladMasterEq.py  README.md  pyproject.toml  tests.py
.ipynb_checkpoints/: LindbladMasterEq-checkpoint.py  pyproject-checkpoint.toml  tests-checkpoint.py
notebooks/: alkalis.ipynb  rb85_D1.ipynb  rb85_D2.ipynb  rb87 with Doppler.ipynb  rb87_D1.ipynb  rb87_D2.ipynb
notebooks/.ipynb_checkpoints/: alkalis-checkpoint.ipynb  rb85_D2-checkpoint.ipynb  rb87 with Doppler-checkpoint.ipynb  rb87_D1-checkpoint.ipynb
paper_figures/: fig3.py  fig4.py  preprocess_data.py
paper_figures/data/0.5mm_0.6T_15V/: C2--0.32uW-baseline.csv  C2--0.32uW.csv  C2--0.56uW-baseline.csv  C2--0.56uW.csv  C2--1.8mW-baseline.csv  C2--1.8mW.csv  C2--1.8uW-baseline.csv  C2--1.8uW.csv  C2--100uW-baseline.csv  C2--100uW.csv  C2--10uW-baseline.csv  C2--10uW.csv  C2--180uW.csv  (+55 more)
paper_figures/simulation/: 0.5_62.0_0.0_transit_single_factor_propagated.npz  0.5_81.0_0.0_transit_single_factor_propagated.npz  1.0_66.5_0.0_transit_single_factor_propagated.npz  1.0_81.5_0.0_transit_single_factor_propagated.npz  2.0_67.0_0.0_transit_single_factor_propagated.npz  2.0_81.5_0.0_transit_single_factor_propagated.npz
paper_figures/tmp_fig3/: (0.0005, 62.0, 0, 0.25, 1)_0.274.npz  (0.0005, 62.0, 0, 0.25, 1)_152.5.npz  (0.0005, 62.0, 0, 0.25, 1)_8.57.npz  (0.001, 66.5, 0, 0.83, 1)_1.27.npz  (0.001, 66.5, 0, 0.83, 1)_12.7.npz  (0.001, 66.5, 0, 0.83, 1)_228.0.npz  (0.002, 67.0, 0, 0.9, 1)_0.343.npz  (0.002, 67.0, 0, 0.9, 1)_11.0.npz  (0.002, 67.0, 0, 0.9, 1)_343.4.npz
(+1171 files in other folders)
